--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'jacoco'
 }
 
 android {
@@ -18,6 +19,9 @@ android {
     }
 
     buildTypes {
+        debug {
+            testCoverageEnabled = true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -30,6 +34,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    jacoco {
+        version "$jacocoVersion"
+    }
+}
+jacoco {
+    toolVersion "$jacocoVersion"
 }
 
 dependencies {
@@ -41,4 +51,25 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+}
+
+tasks.register("jacocoTestReport", JacocoReport) {
+    reports {
+        html.enabled = true
+        xml.enabled = true
+    }
+    getClassDirectories().setFrom(fileTree(
+            dir: "${rootProject.projectDir}",
+            includes: ["app/build/tmp/kotlin-classes/debug/**/*.class"],
+            // ignore generated code
+            excludes: ["**/R.class", "**/R\$*.class", "**/Manifest.class", "**/Manifest\$*.class", "**/BuildConfig.class"]))
+    getSourceDirectories().setFrom(files(
+            "${project.projectDir}/src/main/java"
+    ))
+    getExecutionData().setFrom(fileTree(
+            dir: "${rootProject.projectDir}",
+            includes: [
+                    "app/build/outputs/code_coverage/debugAndroidTest/connected/*.ec"
+            ]))
+    dependsOn tasks.named("createDebugAndroidTestCoverageReport")
 }
