--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.5.21"
+    ext.jacocoVersion = "0.8.7"
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
+        classpath "org.jacoco:org.jacoco.core:${jacocoVersion}"
         classpath "com.android.tools.build:gradle:4.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
